--- a/src/components/colection-item/collection-item.styles.scss
+++ b/src/components/colection-item/collection-item.styles.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     height: 350px;
     align-items: center;
+    position: relative;
 
     .image {
         width: 100%;
@@ -13,11 +14,30 @@
         margin-bottom: 5%;
     }
 
+    .custom-button {
+        width: 80%;
+        opacity: 0.7;
+        position: absolute;
+        top: 255px;
+        display: none;
+    }
+
     .collection-footer {
         width: 100%;
         height: 5%;
         display: flex;
         justify-content: space-between;
         font-size: 18px;
+    }
+
+    &:hover {
+        .image {
+            opacity: 0.8;
+        }
+
+        .custom-button {
+            opacity: 0.85;
+            display: flex;
+        }
     }
 }
